[package]
name = "gset"
version = "1.0.5"
authors = ["Andrew Sonin <sonin.cel@yandex.ru>"]
description = "A procedural macro for generating the most basic getters and setters on fields."
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["macro", "getter", "setter", "getters", "setters"]
documentation = "https://docs.rs/gset/"
repository = "https://github.com/andrewsonin/gset"
homepage = "https://github.com/andrewsonin/gset"
readme = "README.md"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
derive_more = "0.99"
lazy_format = "2"
quote = "1"
printable = "2"
proc-macro-error = "1"
proc-macro2 = "1"
syn = "1"

[lints.rust]
rust_2018_idioms = { level = "warn", priority = 1 }
unreachable_pub = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
undocumented_unsafe_blocks = "warn"
pedantic = { level = "warn", priority = 1 }
